# llm-conv-summarize

./: .env.example  .gitignore  README.md  pyproject.toml
src/: __init__.py  app.py
src/models/: __init__.py  conversation_analyzer.py  conversation_summarizer.py  llm_manager.py  user_profile_extractor.py
src/ui/: analysis_page.py  history_page.py  profile_page.py
src/utils/: html_generator.py  structured_output.py
